--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Winged Guards</title>
+    <title>Winged Guardians</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <header>
         <nav>
-            <h1>Winged Guards</h1>
+            <h1>Winged Guardians</h1>
             <ul class="top-menu">
               <li><a href="#home">Home</a></li>
                <li><a href="#gps">GPS</a></li>
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <p class="title">Winged Guards</p>
+            <p class="title">Winged Guardians</p>
             <p class="title">Carpathian reserve</p>
         </div>
     </header>
@@ -30,7 +30,7 @@
              <article class="product-card">
                  <h3>Crow</h3>
                  <img src="img/crow.jpg" alt="Carpathian Crow">
-                 <p>A crow is a bird of the genus Corvus, or more broadly a synonym for all of Corvus. The term "crow" is used as part of the common name of many species.</p>
+                 <p>The carrion crow is noisy, perching on a vantage point such as a building or the top of a tree and calling three or four times in quick succession, with a slight pause between each series of croaks.</p>
                  <div class="button-container">
                      <button class="button card-button">About</button>
                      <button class="button card-button">Donate</button>
@@ -38,7 +38,7 @@
              <article class="product-card">
                  <h3>Greenfinch</h3>
                  <img src="img/greenfinch.jpg" alt="Carpathian Greenfinch">
-                 <p>The greenfinches are small passerine birds in the genus Chloris in the subfamily Carduelinae within the Fringillidae.</p>
+                 <p>Woodland edges, farmland hedges and gardens with relatively thick vegetation are favoured for breeding.</p>
                  <div class="button-container">
                      <button class="button card-button">About</button>
                      <button class="button card-button">Donate</button>
@@ -46,7 +46,7 @@
              <article class="product-card">
                  <h3>Sparrow</h3>
                  <img src="img/sparrow.jpg" alt="Carpathian Sparrow">
-                 <p>Sparrows are seed-eating birds with conical bills, brown or gray in color, and many species have distinctive head patterns.</p>
+                 <p>The house sparrow is a very social bird. It is gregarious during all seasons when feeding, often forming flocks with other species of birds.</p>
                  <div class="button-container">
                      <button class="button card-button">About</button>
                      <button class="button card-button">Donate</button>
@@ -62,7 +62,7 @@
              <article class="product-card">
                  <h3>Tomtit</h3>
                  <img src="img/tomtit.jpg" alt="Carpathian Tomtit">
-                 <p>The tomtit is a small (13 cm, 11 g) bird with a large head and a short bill. The male North Island subspecies has black head, back, wings (with a white wing bar) and a white belly.</p>
+                 <p>The tomtit is a small bird with a large head and a short bill. The male North Island subspecies has black head, back, wings and a white belly.</p>
                  <div class="button-container">
                      <button class="button card-button">About</button>
                      <button class="button card-button">Donate</button>
@@ -70,7 +70,7 @@
              <article class="product-card">
                  <h3>Woodpecker</h3>
                  <img src="img/woodpecker.jpg" alt="Carpathian Woodpecker">
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste modi, in consequuntur beatae vero, aliquam nulla ipsum quam ducimus perferendis explicabo voluptatum veritatis? Nulla, recusandae? Doloremque sapiente ducimus ipsam voluptatem?</p>
+                 <p>The majority of woodpeckers live solitary lives, but the spectrum of behaviour ranges from highly antisocial species that are aggressive towards their own kind, to species that live in groups.</p>
                  <div class="button-container">
                      <button class="button card-button">About</button>
                      <button class="button card-button">Donate</button>
